--- a/app/static/bootstrap-dark/css/toggle-bootstrap-dark.css
+++ b/app/static/bootstrap-dark/css/toggle-bootstrap-dark.css
@@ -4460,7 +4460,6 @@ body.bootstrap-dark {
   display: none;
   width: 100%;
   height: 100%;
-  overflow: hidden;
   outline: 0; }
 
 .bootstrap-dark .modal-dialog {
